# android-lib-analysis

./: .gitignore  PLAN.md  android_libraries.db  android_libraries.db-shm  android_libraries.db-wal  main.py  pyproject.toml  rn_libraries.db
.opencode/agents/: android-analyzer.md  rn-analyzer.md
.opencode/skills/cloud-service-check/: SKILL.md
.opencode/skills/code-stats-check/: SKILL.md
.opencode/skills/dependency-analysis/: SKILL.md
.opencode/skills/ecosystem-check/: SKILL.md
.opencode/skills/features-check/: SKILL.md
.opencode/skills/license-check/: SKILL.md
.opencode/skills/mobile-platform-check/: SKILL.md
.opencode/skills/monorepo-detection/: SKILL.md
.opencode/skills/payment-check/: SKILL.md
.opencode_server/share/opencode/: opencode.db
src/: analyzer.py  github_downloader.py  github_parser.py  opencode_client.py  server_pool.py
web/: app.py  db.py  queue.py
web/static/: app.js  style.css
web/templates/: base.html  import.html  index.html  library.html
